--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "ethers": "^6.14.3",
     "next": "15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "viem": "^2.30.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
