--- a/server/package.json
+++ b/server/package.json
@@ -5,17 +5,19 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "start": "node dist/index.js",
-    "dev": "tsx watch src/index.ts",
+    "start": "node dist/server.js",
+    "dev": "tsx watch src/server.ts",
     "build": "tsc",
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@erc7824/nitrolite": "^0.1.3",
+    "@erc7824/nitrolite": "^0.2.6",
+    "chalk": "5.4.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "ethers": "^6.14.3",
     "express": "^4.21.2",
+    "viem": "^2.30.5",
     "ws": "^8.18.2"
   },
   "devDependencies": {
